# LotteryApp

./: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.json  project.private.config.json  settings.gradle  tsconfig.base.json  tsconfig.json  vitest.config.ts
app/: build.gradle
apps/admin-web/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
apps/miniprogram/: app.json  app.ts  app.wxss  package.json  project.config.json  tsconfig.json
docs/: billing.md  compliance.md  data_sources.md  model_training.md  privacy.md  terms.md  wechat-cloudbase-migration.md
infra/: cloudbase.template.json
server/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py
server/app/: __init__.py  main.py
server/app/api/: v1.py
server/app/core/: __init__.py  config.py  rate_limit.py  security.py
server/app/db/: models.py  session.py
server/app/domain/: __init__.py  combinatorics.py  exclusion.py  games.py
server/app/schemas/: api.py
server/app/services/: billing.py  data_sources.py  generator.py  modeling.py  repository.py  stats.py  sync.py
server/app/tasks/: celery_app.py  jobs.py
server/scripts/: export_legacy.py
server/tests/: conftest.py  test_api.py  test_exclusion.py  test_generator.py  test_modeling.py  test_parsers.py  test_sync.py  test_tasks.py
server/tests/fixtures/: cwl_ssq_draw_notice.json  sporttery_dlt_history.json
(+117 files in other folders)
