[project]
name = "lottery-server"
version = "0.1.0"
description = "FastAPI backend for lottery history, generation, exclusion, and statistical scoring."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.1",
    "celery>=5.3.6",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.4",
    "sqlalchemy>=2.0.29",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.2",
]
billing = [
    "google-api-python-client>=2.170.0",
    "google-auth>=2.40.0",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
